Web Automation: -[_WKAutomationSession init] leaks https://bugs.webkit.org/show_bug.cgi?id=176268

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2017-09-02
Reviewed by Darin Adler.

* UIProcess/API/Cocoa/_WKAutomationSession.mm:
(-[_WKAutomationSession init]):

Canonical link: https://commits.webkit.org/192919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221538 268f45cc-cd09-0410-ab3c-d52691b4dbfc